[tmp] fuhon: outcome no_error, gossip PeerContext log
Signed-off-by: turuslan <turuslan.devbox@gmail.com>

--- a/src/common/CMakeLists.txt
+++ b/src/common/CMakeLists.txt
@@ -3,11 +3,21 @@
 # SPDX-License-Identifier: Apache-2.0
 #
 
+libp2p_add_library(p2p_outcome_no_error
+    outcome_no_error.cpp
+    )
+target_link_libraries(p2p_outcome_no_error
+    Boost::boost
+    dl
+    )
+
 libp2p_add_library(p2p_hexutil
     hexutil.cpp
     )
 target_link_libraries(p2p_hexutil
     Boost::boost
+
+    p2p_outcome_no_error
     )
 
 libp2p_add_library(p2p_byteutil
@@ -15,6 +25,8 @@ libp2p_add_library(p2p_byteutil
     )
 target_link_libraries(p2p_byteutil
     Boost::boost
+
+    p2p_outcome_no_error
     )
 
 libp2p_add_library(p2p_literals
