--- a/test/deps/CMakeLists.txt
+++ b/test/deps/CMakeLists.txt
@@ -6,6 +6,8 @@
 addtest(outcome_test outcome_test.cpp)
 target_link_libraries(outcome_test
     Boost::boost
+
+    p2p_outcome_no_error
     )
 
 addtest(di_test di_test.cpp)
