--- a/test/libp2p/crypto/CMakeLists.txt
+++ b/test/libp2p/crypto/CMakeLists.txt
@@ -30,6 +30,8 @@ addtest(ecdsa_test
     )
 target_link_libraries(ecdsa_test
     p2p_ecdsa_provider
+
+    p2p_outcome_no_error
     )
 
 addtest(hmac_test
@@ -68,6 +70,8 @@ addtest(key_validator_test
     )
 target_link_libraries(key_validator_test
     p2p_key_validator
+
+    p2p_outcome_no_error
     )
 
 addtest(rsa_provider_test
@@ -75,6 +79,8 @@ addtest(rsa_provider_test
     )
 target_link_libraries(rsa_provider_test
     p2p_rsa_provider
+
+    p2p_outcome_no_error
     )
 
 addtest(secp256k1_test
